added bootstrap-jquery js loads

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,5 +46,7 @@
     <div id="content" class="container">
       {% block content %} {% endblock %}
     </div>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
   </body>
 </html>
